[gd_scene load_steps=3 format=2]

[ext_resource path="res://Menus/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://default_theme.tres" type="Theme" id=2]

[node name="PauseMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="resume" type="Button" parent="Control"]
margin_left = 811.065
margin_top = 278.328
margin_right = 1111.07
margin_bottom = 337.328
text = "Resume game"

[node name="mute" type="Button" parent="Control"]
margin_left = 828.333
margin_top = 365.12
margin_right = 1072.33
margin_bottom = 425.12
text = "Mute music"

[node name="main" type="Button" parent="Control"]
margin_left = 826.175
margin_top = 449.754
margin_right = 1062.17
margin_bottom = 513.754
text = "Main menu"

[node name="exit" type="Button" parent="Control"]
margin_left = 839.126
margin_top = 530.754
margin_right = 1050.13
margin_bottom = 600.754
text = "Exit game"
[connection signal="pressed" from="Control/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Control/mute" to="." method="_on_mute_pressed"]
[connection signal="pressed" from="Control/main" to="." method="_on_main_pressed"]
[connection signal="pressed" from="Control/exit" to="." method="_on_exit_pressed"]
